# AutoSyncServer_CPP

./: .gitignore  CMakeLists.txt  README.md  rebuild-system.sh  toolchain-arm64.cmake
src/: FileManager.cpp  FileManager.h  main.cpp
src/view/: index.html
src/view/css/: main.css
src/view/js/: app.js
